Dcreator/src/objects/Department__c.object
<CustomObject>
    <fields>
        <fullName>AutoId__c</fullName>
        <displayFormat>D-{000}</displayFormat>
        <label>AutoId</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Avg_Salary__c</fullName>
        <formula>if( (Total_Salaries__c==0||Total_No_Emp__c==0)  ,0,Total_Salaries__c / Total_No_Emp__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalEMP__c</fullName>
        <label>TotalEMP</label>
        <summaryForeignKey>Employee__c.Department__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_No_Emp__c</fullName>
        <label>Total No Emp</label>
        <summaryForeignKey>Employee__c.Department__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_No_US_Emp__c</fullName>
        <label>Total No US Emp</label>
        <summaryFilterItems>
            <field>Employee__c.Country__c</field>
            <operation>equals</operation>
            <value>USA</value>
        </summaryFilterItems>
        <summaryForeignKey>Employee__c.Department__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Salaries__c</fullName>
        <label>Total Salaries</label>
        <summarizedField>Employee__c.Annual_Salary__c</summarizedField>
        <summaryForeignKey>Employee__c.Department__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Department</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Total_No_Emp__c</columns>
        <columns>Total_Salaries__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Department Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>